--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.3.1+4
+version: 0.4.1+1
 
 environment:
   sdk: ^3.10.7
@@ -45,7 +45,21 @@ dependencies:
   permission_handler: ^11.3.0
 
   # File system paths
+  # File system paths
   path_provider: ^2.1.2
+  path: ^1.8.3
+
+  # Database
+  sqflite: ^2.3.0
+
+  # CSV handling
+  csv: ^6.0.0
+
+  # Share functionality
+  share_plus: ^10.0.0
+
+  # Internationalization
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -70,9 +84,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/LECTURAS_PILOTO.csv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
