--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -75,12 +75,22 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.4.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: false
   image_path: "assets/logo_asoguapo.png"
   min_sdk_android: 21 # android min sdk
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: "assets/logo_asoguapo.png"
+  android_12:
+    image: "assets/logo_asoguapo.png"
+    color: "#ffffff"
+  android: true
+  ios: false
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
