--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -85,10 +85,12 @@ flutter_launcher_icons:
 
 flutter_native_splash:
   color: "#ffffff"
+  color_dark: "#ffffff"
   image: "assets/logo_asoguapo.png"
   android_12:
     image: "assets/logo_asoguapo.png"
     color: "#ffffff"
+    color_dark: "#ffffff"
   android: true
   ios: false
 
