--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -84,13 +84,13 @@ flutter_launcher_icons:
   min_sdk_android: 21 # android min sdk
 
 flutter_native_splash:
-  color: "#ffffff"
-  color_dark: "#ffffff"
+  color: "#fefefe"
+  color_dark: "#fefefe"
   image: "assets/logo_asoguapo.png"
   android_12:
     image: "assets/logo_asoguapo.png"
-    color: "#ffffff"
-    color_dark: "#ffffff"
+    color: "#fefefe"
+    color_dark: "#fefefe"
   android: true
   ios: false
 
