--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -70,6 +70,9 @@ dependencies:
 
   # Splash Screen
   flutter_native_splash: ^2.4.0
+  flutter_map_marker_cluster: ^1.3.6
+  flutter_map_cache: ^2.0.0+1
+  dio_cache_interceptor: ^4.0.5
 
 
 dev_dependencies:
